--- a/style.css
+++ b/style.css
@@ -1,74 +1,56 @@
-
 body {
     background:no-repeat center;
     background-image: url(img/background.png);
     background-size: 100% 100%;
-background-color: white;
+    background-color: white;
 }
 #main {
 width: 976px;
 margin: auto;
 }
 
-.town {
-    float:left;
+.topbutton {
+    width:100px;
+    border:2px solid #ccc;
+    background:linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(230,230,230,1) 100%);
+    text-align:center;
+    padding:10px;
+    position:fixed;
+    bottom:50px;
+    right:50px;
+    cursor:pointer;
+    color:#333;
+    font-family:verdana;
+    font-size:12px;
+    border-radius: 5px;
+    }
 
+
+.gotomain {
     margin: 5px;
-    padding: 5px;
-
-    
-}
-
-.towncolumn {
-
-
-    margin: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 5px;
-    display: block;
-
-}
-
-.smallupmargin {
-    margin-top: 5px;
-}
-
-.smalldownmargin {
-    margin-bottom: 5px;
-}
-
-
-.town, .towncolumn {
-    width: 100px;
-    height: 55px;
+    padding: 10px; 
+    font-size: 40px;
     border: 1px solid gray;
+    display: block;
     text-align: center;
     text-decoration: none;
     color: black;
-    padding-top: 45px;
-    background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 50%,rgba(237,237,237,1) 51%,rgba(255,255,255,1) 100%);
-    background-size: 150% !important;
     box-shadow: -5px 5px 5px rgba(122,122,122,0.5);
-    transition: background-size 1s ease-out 0s;
+    background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 86%,rgba(237,237,237,1) 87%,rgba(255,255,255,1) 100%);
+    cursor: pointer;
 }
 
-.town:hover, .towncolumn:hover {
-    background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(237,237,237,1) 50%, rgba(243,243,243,1) 51%  ,rgba(255,255,255,1) 100%);
+.gotomain:hover {
+    background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(237,237,237,1) 86%,rgba(243,243,243,1) 87%,rgba(255,255,255,1) 100%);
     text-decoration: underline;
-    background-size: 200% !important;
 }
-
-
 
 .info {
     margin: 5px;
-    padding: 10px;
-    height: 436px;
-    width: 700px;
+    padding: 10px; 
     border: 1px solid gray;
-    background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 86%,rgba(237,237,237,1) 87%,rgba(255,255,255,1) 100%);
     box-shadow: -5px 5px 5px rgba(122,122,122,0.5);
+    background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 86%,rgba(237,237,237,1) 87%,rgba(255,255,255,1) 100%);
 }
 
 .title {
@@ -76,23 +58,11 @@ margin: auto;
     font-size: 40px;
 }
 
-.text {
-    height: 395px;
+.subtitle {
+    padding-top: 10px;
     font-size: 25px;
+    text-decoration: underline;
 }
-
-
-.rightcolumn, .info, .leftcolumn {
-    float:left;
-}
-
-.upperrow:after, .midrow:after, .downrow:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-
 
 .map {
     margin: 5px;
@@ -102,3 +72,7 @@ margin: auto;
     background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 86%,rgba(237,237,237,1) 87%,rgba(255,255,255,1) 100%);
 }
 
+img {
+    height: 531px;
+    width: 944px;
+}
