--- a/style.css
+++ b/style.css
@@ -65,9 +65,8 @@ margin: auto;
     text-decoration: underline;
 }
 
-.text {
-    text-align: initial;
-}
+
+
 
 .map {
     margin: 5px;
@@ -80,4 +79,46 @@ margin: auto;
 img {
     height: 531px;
     width: 944px;
+}
+
+.text, p {
+    text-align:initial;
+}
+
+.stats {
+    margin: 5px;
+    padding: 10px; 
+    border: 1px solid gray;
+    height: 300px;
+    width: 300px;
+    box-shadow: -5px 5px 5px rgba(122,122,122,0.5);
+    background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 86%,rgba(237,237,237,1) 87%,rgba(255,255,255,1) 100%);
+    float:left;
+}
+
+.symbols {
+    margin: 5px;
+    padding: 10px; 
+    border: 1px solid gray;
+    box-shadow: -5px 5px 5px rgba(122,122,122,0.5);
+    background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 86%,rgba(237,237,237,1) 87%,rgba(255,255,255,1) 100%);
+    height: 300px;
+    float:left;
+}
+
+.symbol1 {
+    height: 300px;
+    width: 358px;
+}
+
+.symbol2 {
+    height: 300px;
+    width: 250px;
+}
+
+
+.statsandsymbols:after {
+    content: "";
+    display: table;
+    clear: both;
 }
