--- a/stylemain.css
+++ b/stylemain.css
@@ -105,3 +105,13 @@ margin: auto;
     box-shadow: -5px 5px 5px rgba(122,122,122,0.5);
     background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 86%,rgba(237,237,237,1) 87%,rgba(255,255,255,1) 100%);
 }
+
+.footer {
+    margin: 5px;
+    padding: 30px; 
+    border: 1px solid gray;
+    box-shadow: -5px 5px 5px rgba(122,122,122,0.5);
+    background: linear-gradient(135deg, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 86%,rgba(237,237,237,1) 87%,rgba(255,255,255,1) 100%);
+    font-size: 25px;
+    text-align: center;
+}
